Prevent layout shift by keeping the scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 html {
   color: #212427;
+  overflow-y: scroll;
 }
 
 :root {
